manifest/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-app
  namespace: test-uat
  labels:
    app: spring-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: spring-app
  template:
    metadata:
      labels:
        app: spring-app
    spec:
      containers:
        - name: spring-app
          image: ayyarsachin/simpleproj-ms-stage:11
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
