manifest/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-app
  namespace: test-uat
spec:
  selector:
    app: spring-app
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30083 
  type: NodePort
