manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: springapp-ingress
  namespace: test-uat
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx

  tls:
  - hosts:
    - springapp.ayyarsachin.shop
    secretName: wildcard-ayyarsachin-shop-tls

  rules:
  - host: springapp.ayyarsachin.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: spring-app
            port:
              number: 80
